# blackhawk-backend

./: .dockerignore  DEPLOYMENT_SETUP.md  Makefile  README.md  STEP_BY_STEP_GUIDE.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: README.md  deploy-cloud-run.yml
app/: main.py
app/api/: deps.py
app/api/v1/: routes.py
app/api/v1/controllers/: __init__.py  comment_like.py  post.py  (+4 more)
app/core/: __init__.py  config.py  router_utils.py
app/db/: __init__.py  session.py
app/langchain_components/: memory.py
app/models/: __init__.py  comment_like.py  post.py  post_bookmark.py  post_comment.py  post_like.py  timestamp_mixin.py  user.py  user_auth_provider.py
app/repositories/: base.py  comment_like.py  post.py  post_bookmark.py  post_comment.py  post_like.py  user_repository.py
app/schemas/: comment_like.py  post.py  post_bookmark.py  post_comment.py  post_like.py  user.py
app/services/: comment_like.py  post.py  post_bookmark.py  post_comment.py  post_like.py  user_service.py
app/utils/: exceptions.py  response.py
docker/: Dockerfile  docker-compose.yml
migrations/: env.py
migrations/versions/: 1a030c74d9e3_create_users_table.py  2f8b46444811_create_post_likes_table.py  363a15ebef23_create_post_table.py  628163eba16e_initial.py  8c1a382f4ebd_create_user_auth_providers.py  b471447ced6c_create_post_comments_and_comment_likes_.py  b58c99918bc1_create_post_bookmarks_table.py
scripts/: init_db.sh  run_migrations.py  seed_data.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_services.py
